
  Close #2761

* Fix issue with pylint name in output of python -m pylint --version

  Close #2764

* Relicense logo material under the CC BY-SA 4.0 license.

* Skip `if` expressions from f-strings for the `check_elif` checker

  Close #2816

* C0412 (ungrouped-import) is now compatible with isort.

  Close #2806

* Added new extension to detect too much code in a try clause

  Close #2877


What's New in Pylint 2.3.0?
===========================

Release date: 2019-02-27

* Protect against `NonDeducibleTypeHierarchy` when calling semi-private `is_subtype`

  `astroid.helpers.is_subtype` raises `NonDeducibleTypeHierarchy` when it cannot infer
  the base classes of the given types, but that makes sense in its context given that
  the method is mostly used to inform the inference process about the hierarchy of classes.
  Doesn't make that much sense for ``pylint`` itself, which is why we're handling the
  exception here, rather than in ``astroid``

  Close PyCQA/astroid#644

* Added a new command line option ``list-groups`` for listing all the check groups ``pylint`` knows about.

* Allow ``BaseException`` for emitting ``broad-except``, just like ``Exception``.

  Close #2741

* Fixed a crash that occurred for ``bad-str-strip-call`` when ``strip()`` received ``None``

  Close #2743

* Don't emit ``*-not-iterating`` checks for builtins consumed by ``itertools``

  Close #2731

* Fix a crash caused by iterating over ``Uninferable`` in a string formatting check.

  Close #2727

* Fixed false positives for ``no-self-argument`` and ``unsubscriptable-object`` when using ``__class_getitem__`` (new in Python 3.7)

  Close #2416

* Support ``Ellipsis`` as a synonym for ``pass`` statements.

  Close #2718

* ``fixme`` gets triggered only on comments.

  Close #2321

* Fixed a false positive for ``unused-variable`` and ``nonlocal`` assignments

  Close #2671

* Added ``load_configuration()`` hook for plugins

  New optional hook for plugins is added: ``load_configuration()``.