@@ -107,6 +107,10 @@ Release date: TBA
 
   Close #2877
 
+* Fixed a pragma comment on its own physical line being ignored when part
+  of a logical line with the previous physical line.
+
+  Close #199
 
 What's New in Pylint 2.3.0?
 ===========================
